--- a/django_blog/blog/templates/blog/post_detail.html
+++ b/django_blog/blog/templates/blog/post_detail.html
@@ -8,3 +8,22 @@
 <a href="{% url 'post_delete' post.pk %}">Delete</a>
 {% endif %}
 {% endblock %}
+<h3>Comments</h3>
+{% for comment in post.comments.all %}
+<div>
+    <p>{{ comment.author.username }}: {{ comment.content }}</p>
+    <small>Created at: {{ comment.created_at }}</small>
+    {% if user == comment.author %}
+    <a href="{% url 'edit_comment' comment.id %}">Edit</a>
+    <a href="{% url 'delete_comment' comment.id %}">Delete</a>
+    {% endif %}
+</div>
+{% empty %}
+<p>No comments yet.</p>
+{% endfor %}
+
+{% if user.is_authenticated %}
+<a href="{% url 'add_comment' post.id %}">Add Comment</a>
+{% else %}
+<p><a href="{% url 'login' %}">Login</a> to add a comment.</p>
+{% endif %}
