--- a/django_blog/blog/templates/blog/post_detail.html
+++ b/django_blog/blog/templates/blog/post_detail.html
@@ -27,3 +27,15 @@
 {% else %}
 <p><a href="{% url 'login' %}">Login</a> to add a comment.</p>
 {% endif %}
+
+<h4>Tags:</h4>
+{% for tag in post.tags.all %}
+<a href="{% url 'posts_by_tag' tag_name=tag.name %}">{{ tag.name }}</a>
+{% empty %}
+<p>No tags</p>
+{% endfor %}
+
+<form method="GET" action="{% url 'search_posts' %}">
+    <input type="text" name="q" placeholder="Search posts...">
+    <button type="submit">Search</button>
+</form>
